fix off center social icons

--- a/default.css
+++ b/default.css
@@ -126,6 +126,7 @@
 		margin: 0em 0 3em 0;
 		padding-top: 1em;
 		text-align: center;
+		padding-left: 0;
 	}
 	
 	ul.contact li
